--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steve-policjant-v2",
-  "version": "2.2.2",
+  "version": "2.3.0",
   "description": "",
   "main": "steve.js",
   "dependencies": {
@@ -10,6 +10,7 @@
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "microtime": "^3.0.0",
+    "node-nlp": "^4.22.1",
     "nope.db": "^0.0.9"
   },
   "scripts": {
