Mniej pracy dla adm trollge

--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
     "prefix": "dev ",
     "kary": "818525476283875338",
     "guild": "818374882873442314",
-    "wordlist": ["kid", "nigg", "ı", "î", "Ķ", "į", "kitoda"]
+    "wordlist": ["kid", "nigg", "ı", "î", "Ķ", "į", "kitoda", "discord.gg", "discordapp.com/invite", "discord.com/invite"]
 }
