--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "discord-api-types": "^0.25.2",
     "discord.js": "^13.4.0",
     "dotenv": "^10.0.0",
+    "keyv": "^4.0.4",
     "microtime": "^3.0.0",
     "node-nlp": "^4.22.1",
     "nope.db": "^0.0.9"
